--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.venv
+.vscode
+
 # For PCBs designed using KiCad: https://www.kicad.org/
 # Format documentation: https://kicad.org/help/file-formats/
 
